tests/src/frontend/typechecking/invalid/dependent_generic_args.sk
class Foo<T>(x: T)

fun foo<T, T2: Foo<T>>(x: T): T2 {
  Foo(x)
}
